--- a/src/components/_shared.scss
+++ b/src/components/_shared.scss
@@ -12,3 +12,6 @@
   &:last-of-type      {border-bottom: none; }
   .btn.deleter        {margin-left:auto; cursor: pointer; }
 }
+input                 {width:100%; height:35px; border-radius: 4px; background: #f5f9f9;
+  &:focus             {background: white; color:#0c1a1f; }
+}
